[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/gdscript_documentation_generator/main.gd" type="Script" id=1]

[node name="Main" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer"]
margin_right = 1010.0
margin_bottom = 558.0
size_flags_vertical = 3
split_offset = 252

[node name="Tree" type="Tree" parent="VBoxContainer/HSplitContainer"]
margin_right = 253.0
margin_bottom = 558.0
hide_root = true

[node name="Pages" type="PanelContainer" parent="VBoxContainer/HSplitContainer"]
margin_left = 265.0
margin_right = 1010.0
margin_bottom = 558.0

[node name="Generator" type="VBoxContainer" parent="VBoxContainer/HSplitContainer/Pages"]
margin_left = 7.0
margin_top = 7.0
margin_right = 738.0
margin_bottom = 551.0

[node name="ScanAll" type="CheckButton" parent="VBoxContainer/HSplitContainer/Pages/Generator"]
margin_right = 731.0
margin_bottom = 40.0
text = "Scan all"

[node name="ScanDirectory" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/Pages/Generator"]
margin_top = 44.0
margin_right = 731.0
margin_bottom = 68.0

[node name="Label" type="Label" parent="VBoxContainer/HSplitContainer/Pages/Generator/ScanDirectory"]
margin_top = 5.0
margin_right = 363.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Scan directory"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/Pages/Generator/ScanDirectory"]
margin_left = 367.0
margin_right = 731.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HSplitContainer/Pages/Generator/ScanDirectory/HBoxContainer"]
margin_right = 309.0
margin_bottom = 24.0
size_flags_horizontal = 3
editable = false

[node name="Button" type="Button" parent="VBoxContainer/HSplitContainer/Pages/Generator/ScanDirectory/HBoxContainer"]
margin_left = 313.0
margin_right = 364.0
margin_bottom = 24.0
disabled = true
text = "Select"

[node name="OutputDirectory" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/Pages/Generator"]
margin_top = 72.0
margin_right = 731.0
margin_bottom = 96.0

[node name="Label" type="Label" parent="VBoxContainer/HSplitContainer/Pages/Generator/OutputDirectory"]
margin_top = 5.0
margin_right = 363.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Output  directory"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/Pages/Generator/OutputDirectory"]
margin_left = 367.0
margin_right = 731.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HSplitContainer/Pages/Generator/OutputDirectory/HBoxContainer"]
margin_right = 309.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="VBoxContainer/HSplitContainer/Pages/Generator/OutputDirectory/HBoxContainer"]
margin_left = 313.0
margin_right = 364.0
margin_bottom = 24.0
text = "Select"

[node name="Generate" type="Button" parent="VBoxContainer/HSplitContainer/Pages/Generator"]
margin_top = 524.0
margin_right = 731.0
margin_bottom = 544.0
size_flags_vertical = 10
text = "Generate"

[node name="Logs" type="TextEdit" parent="VBoxContainer/HSplitContainer/Pages"]
visible = false
margin_left = 7.0
margin_top = 7.0
margin_right = 738.0
margin_bottom = 551.0
custom_colors/font_color_readonly = Color( 1, 1, 1, 1 )
readonly = true

[node name="Settings" type="VBoxContainer" parent="VBoxContainer/HSplitContainer/Pages"]
visible = false
margin_left = 7.0
margin_top = 7.0
margin_right = 485.0
margin_bottom = 579.0

[node name="Status" type="LineEdit" parent="VBoxContainer"]
margin_top = 562.0
margin_right = 1010.0
margin_bottom = 586.0
custom_colors/font_color_uneditable = Color( 1, 1, 1, 1 )
editable = false
